Thu Mar  4 08:03:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Changed path /impl/ndds to /impl/dds or
          /impl/dds/ndds.

Thu Mar  4 07:50:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next micro

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: