@@ -1,3 +1,10 @@
+Thu Mar  4 11:58:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.cpp:
+        * tao/PI/PI.h:
+        * tao/VarOut_T.h:
+          Layout and doxygen changes
+
 Thu Mar  4 08:03:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * TAO_IDL/be/be_codegen.cpp:
